# pjz110_sampling_controller

./: .gitignore  Cargo.toml  Cargo.toml.bak  README.md  config.toml  debug.sh  games.toml  get_all_code.sh  opt.sh  release.sh
.cargo/: config.toml
.github/workflows/: ci.yml  rust.yml
maketools/: build.py  toolchains.py
module/: customize.sh  games.toml  log.txt  module.prop  service.sh
src/: file_monitor.rs  logger.rs  main.rs  main.rs.bak  read.rs
src/run/: mod.rs  read.rs  run_cmd.rs  start.rs
src/shared/: file_monitor.rs  get_top_app.rs  logger.rs  mod.rs
src/utils/: get_top_app.rs  mod.rs  run_cmd.rs
